test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_consts_and_vars_alias/src/lib.sw
library;

pub const X: u64 = 5;

pub const L: u64 = 5;

pub const P: u64 = 5;
